# audio-transcription

./: README.md  main.py  pyproject.toml  snippet.py  whisper.py
media/: .gitignore  Speech_12dB_alaw8.flac
scripts/: setup_windows_dev.ps1
